   -- Changed USE_PREPARE slightly.  There is now a 'strict' and a 'normal'
      setting for USE_PREPARE.  Under strict, the READY command MUST be
      used or the unit will not use any battle items.  Under normal, the
      unit will fall back on the battle items list.
   -- gamedefs OCEAN and CONTINENT_SIZE now determine surface level parameters.
   -- Fixed a bug which caused the first mage casting Earth Lore in a
      region to recieve 2*level less silver than he should.
   -- Fixed a bug where an army where all casualties were healed were
      prevented from further moves or attacks.  Full healing should mean
      no penalties.
   -- Fixed a bug in output of rules dealing with skill-based maintenance.
   -- Fixed a bug dealing with the cost of non-skilled units versus skilled
      units when in a maintenance mode which requires skill based upkeep.
      Units will now pay the maximum of the skill based upkeep or the normal
      upkeep.  This means that GM's should probably *lower* the normal upkeep
      to something more reasonable than 10/20 if they are using the skill
      based upkeep unless they JUST want to penalize higher skilled leaders.
   -- Fixed bug where completed buildings weren't providing combat protection.
   -- Add some additional information to battle reports to help out the
      author of atlaclient.
   -- Fixed a bug where issuing a build order and an enter order on the same
      turn caused you to be in the wrong building and thus fail to build.
   -- Fixed bug in construct gate which made it successful 100% of the time
      at level 1, instead of 20% at level 1 up to 100% at level 5.
   -- Fixed bug where @endturn failed to work.
   -- Fixed another bug in skill based maintenance.
   -- Calls to CleanUpWater() and SeverLandBridges() now part of the default
      surface level creation. Also added some variability in terrain growth
      and some code to prevent land from squeezing onto the north and south
      map edges.