@@ -417,6 +417,7 @@ enum {
 	O_HPTOWER,
 	O_OBANK,
 	O_CARAVANSERAI,
+	O_CORACLE,
 	NOBJECTS
 };
 
